Navigation/3.2/README.md
AndroidTriviaNavigation - solution code
=======================================

1. Add navigation 
2. Create the NavHostFragment within the activity_main layout
3. Add fragments to the navigation graph
4. Change the Back button's destination (pop)
5. Add an Up Button in the app bar
6. Add an options menu
7. Add the navigation drawer

License
-------

Copyright 2019 Google, Inc.

Licensed to the Apache Software Foundation (ASF) under one or more contributor
license agreements.  See the NOTICE file distributed with this work for
additional information regarding copyright ownership.  The ASF licenses this
file to you under the Apache License, Version 2.0 (the "License"); you may not
use this file except in compliance with the License.  You may obtain a copy of
the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
License for the specific language governing permissions and limitations under
the License.